--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                 <h2>Plus</h2>
             </div> -->
             <div class="proitem">
-                <img src="img/i1.jpg" alt="">
+                <img src="img/pro1.jpg" alt="">
 
                 <div class="prodata">
                     <span class="price">AU$0.78</span>
@@ -800,9 +800,3 @@
 </html>
 
 <!-- End--------------------------------------- -->
-
-
-
-
-
-
